fix(styles): change text alignment from center to start in note table header

--- a/FFE-pyRevit.extension/FFE-pyRevit.tab/BetaTools.panel/Keynotes.pushbutton/support/styles.css
+++ b/FFE-pyRevit.extension/FFE-pyRevit.tab/BetaTools.panel/Keynotes.pushbutton/support/styles.css
@@ -1075,7 +1075,7 @@ h2 {
 }
 
 .note-table-header th:nth-child(2) {
-  text-align: center;
+  text-align: start;
 }
 
 .note-row {
